--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     "path": "https://esm.sh/path@^0.12.7",
     "leaflet": "https://esm.sh/leaflet@^1.9.4",
     "url": "https://esm.sh/url@^0.11.4",
-    "react-leaflet": "https://esm.sh/react-leaflet@^5.0.0"
+    "react-leaflet": "https://esm.sh/react-leaflet@^5.0.0",
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@^4.4.1"
   }
 }
 </script>
